# sift

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  composer.json  package.xml
.docker/: Dockerfile
benchmarks/: cold_start.php  lazy_get.php  memory.php  query_bench.php
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMPOSER.md
src/: errors.rs  lib.rs  parser.rs  query.rs
stubs/: Query.php  Sift.php  Sonic.php
tests/php/: SiftTest.php  SonicTest.php
